--- a/frontend/.env
+++ b/frontend/.env
@@ -1,2 +1,3 @@
 DB="mongodb+srv://vindireshvaremail:Indiresh777@mern.kkbob.mongodb.net/?retryWrites=true&w=majority&appName=MERN"
 REACT_APP_CLOUD_NAME_CLOUDINARY = dmbg5xz4e
+REACT_APP_BACKEND_URL = "http://localhost:8080"
